--- a/src/layout/MainPage.css
+++ b/src/layout/MainPage.css
@@ -118,9 +118,13 @@ li a.dropdown-toggle::after {
   height: 100vh;
 }
 
+.react-bootstrap-table-page-btns-ul {
+  float: right;
+}
+
 @media only screen and (max-width: 575.98px) {
   body {
-    overflow:  hidden;
+    overflow:  scroll;
   }
   
   .content.is-open {
